Cambios para ver los cursos

--- a/vistas/principal.html
+++ b/vistas/principal.html
@@ -125,7 +125,7 @@
     <div class="container-fluid">
         <div class="row no-gutter popup-gallery">
             <div class="col-lg-4 col-sm-6">
-                <a href="img/portfolio/fullsize/cocina.jpg" class="portfolio-box">
+                <a href="#/cocina" class="portfolio-box">
                     <img src="img/portfolio/thumbnails/cocina.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -140,7 +140,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="img/portfolio/fullsize/programacion.jpg" class="portfolio-box">
+                <a href="#/programacion" class="portfolio-box">
                     <img src="img/portfolio/thumbnails/programacion.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -155,7 +155,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="img/portfolio/fullsize/enterpreneur.jpg" class="portfolio-box">
+                <a href="#/entrepreneurship" class="portfolio-box">
                     <img src="img/portfolio/thumbnails/enterpreneur.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -170,7 +170,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="img/portfolio/fullsize/idiomas.jpg" class="portfolio-box">
+                <a href="#/idiomas" class="portfolio-box">
                     <img src="img/portfolio/thumbnails/idiomas.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
