Corrigiendo ligas para ver el resto de las paginas

--- a/public/vistas/principal.html
+++ b/public/vistas/principal.html
@@ -133,7 +133,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Cocina
+                               <a href="#/cocina">Cocina</a>
                             </div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Programación
+                                <a href="#/programacion">Programación</a>
                             </div>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Enterpreneurship
+                                <a href="#/entrepreneurship">Enterpreneurship</a>
                             </div>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Idiomas
+                                <a href="#/idiomas">Idiomas</a>
                             </div>
                         </div>
                     </div>
