--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="appCursos">
 <head>
 
-    <meta charset="utf-8">
+    <meta charset="utf-8" ng-app="appCursos">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -10,8 +10,16 @@
 
     <title>xTravel</title>
 
+    <!--Angular JS-->
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+    <script src="js/app.js"></script>
+
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -33,7 +41,7 @@
 
 </head>
 
-<body id="page-top" ng-app="IniciaWebApp">
+<body id="page-top">
 
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
@@ -120,6 +128,37 @@
         </div>
     </div>
 </section>
+
+<!--busca cursos-->
+<br />
+<section>
+    <div class = "container" ng-controller="cursosController as curso">
+        <div class="row">
+
+            <input type="text" ng-model="search.name" placeholder="¿Qué curso quieres buscar?"><!--el signo $ me indica que busca todo-->
+
+            <div class="card col s4" ng-repeat="c in curso.collection | filter: search | orderBy: 'name':0 ">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="{{c.img}}">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">{{c.name}}<i class="material-icons right">more_vert</i></span>
+                    <p><a href="#">Liga!</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">{{c.name}}<i class="material-icons right">close</i></span>
+                    <p>
+                        Cast:{{c.cast}} <br>
+                        Year:{{c.year}} <br>
+                        Category:{{c.category}} <br>
+
+                    </p>
+                </div>
+            </div>
+
+
+</section>
+
 
 <section class="no-padding" id="portfolio">
     <div class="container-fluid">
@@ -238,8 +277,10 @@
 <!-- AngularFire -->
 <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
 
-<!-- App.js -->
-<script src="js/app.js"></script>
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
 </body>
 
